--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,4 +1,4 @@
-{
+[{
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
@@ -10,4 +10,11 @@
   "cli": {
     "migrationsDir": "./src/database/migrations"
   }
-}
+  },{
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5432,
+  "username": "postgres",
+  "password": "docker",
+  "database": "gostack_desafio06_tests"
+}]
